// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Index createDomStream 1`] = `
Array [
  &This is text,
  <!-- and comments -->,
  <tags />,
]
`;

exports[`Index parseDOM 1`] = `
Array [
  <a
    foo=""
  >
    <b>
      <c>
        ProcessingInstruction {
          "data": "?foo",
          "endIndex": null,
          "name": "?foo",
          "next": Yay!,
          "parent": <c>
            [Circular]
            Yay!
          </c>,
          "prev": null,
          "startIndex": null,
          "type": "directive",
        }
        Yay!
      </c>
    </b>
  </a>,
]
`;

exports[`Index parseDocument 1`] = `
Document {
  "children": Array [
    <a
      foo=""
    >
      <b>
        <c>
          ProcessingInstruction {
            "data": "?foo",
            "endIndex": null,
            "name": "?foo",
            "next": Yay!,
            "parent": <c>
              [Circular]
              Yay!
            </c>,
            "prev": null,
            "startIndex": null,
            "type": "directive",
          }
          Yay!
        </c>
      </b>
    </a>,
  ],
  "endIndex": null,
  "next": null,
  "parent": null,
  "prev": null,
  "startIndex": null,
  "type": "root",
}
`;
